# data-segregator

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  PROJECT.md  README.md  TODO.md  pyproject.toml
App/: __init__.py  canonical.py  canonical_cli.py  classify.py  cli.py  constants.py  db.py  destination_plan.py  destination_plan_cli.py  destination_plan_finalize.py  destination_plan_finalize_cli.py  destination_plan_safe_cli.py  destination_plan_v2.py  final_media_audit.py  final_media_audit_cli.py  full_copy.py  full_copy_auto.py  full_copy_auto_cli.py  full_copy_cli.py  hashing.py  indexer.py  metadata.py  metadata_cli.py  metadata_extract_cli.py  metadata_safe.py  metadata_v2.py  metadata_v2_cli.py  pilot_cleanup.py  pilot_cleanup_cli.py  pilot_cleanup_plan.py  pilot_cleanup_plan_cli.py  pilot_copy.py  pilot_copy_cli.py  project.py  reclassify_ts.py  reclassify_ts_cli.py  reporting.py  review_pack.py  review_pack_cli.py  review_pack_v2.py  (+12 more)
tests/: test_classify.py
